--- a/.env
+++ b/.env
@@ -1,23 +1,23 @@
-APP_NAME=Laravel
+APP_NAME=AAcademica
 APP_ENV=local
 APP_KEY=base64:yMVV0UWSRlguuIVOKVnHbHNXEbqX6gqZR9l4o+BFEv8=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://agendaacademica.herokuapp.com/
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=sql207.byethost.com
 DB_PORT=3306
-DB_DATABASE=agenda
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=b18_22777985_agenda
+DB_USERNAME=b18_22777985
+DB_PASSWORD=salazar1995
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+QUEUE_DRIVER=sync
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
