--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_NAME=AAcademica
+APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:yMVV0UWSRlguuIVOKVnHbHNXEbqX6gqZR9l4o+BFEv8=
 APP_DEBUG=true
-APP_URL=https://agendaacademica.herokuapp.com/
+APP_URL=https://agenda-academica.herokuapp.com/
 
 LOG_CHANNEL=stack
 
