--- a/.env
+++ b/.env
@@ -2,16 +2,16 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:yMVV0UWSRlguuIVOKVnHbHNXEbqX6gqZR9l4o+BFEv8=
 APP_DEBUG=true
-APP_URL=https://agenda-academica.herokuapp.com/
+APP_URL=localhost
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=sql207.byethost.com
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=b18_22777985_agenda
-DB_USERNAME=b18_22777985
-DB_PASSWORD=salazar1995
+DB_DATABASE=agenda
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
