--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=agenda.cnswieupaupp.sa-east-1.rds.amazonaws.com
 DB_PORT=3306
 DB_DATABASE=agenda
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=agendaroot
+DB_PASSWORD=Sonicfast94
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
