--- a/.env
+++ b/.env
@@ -7,9 +7,9 @@ APP_URL=agenda-academica.sa-east-1.elasticbeanstalk.com
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=agenda.cnswieupaupp.sa-east-1.rds.amazonaws.com
+DB_HOST=aa1bjnusb4fqbdp.cnswieupaupp.sa-east-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=agenda
+DB_DATABASE=aa1bjnusb4fqbdp
 DB_USERNAME=agendaroot
 DB_PASSWORD=Sonicfast94
 
