--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
 APP_NAME=Agenda_Academica
-APP_ENV=production
+APP_ENV=local
 APP_KEY=base64:yMVV0UWSRlguuIVOKVnHbHNXEbqX6gqZR9l4o+BFEv8=
 APP_DEBUG=true
-APP_URL=agenda-academica.sa-east-1.elasticbeanstalk.com
+APP_URL=localhost
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=aa1bjnusb4fqbdp.cnswieupaupp.sa-east-1.rds.amazonaws.com
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=aa1bjnusb4fqbdp
-DB_USERNAME=agendaroot
-DB_PASSWORD=Sonicfast94
+DB_DATABASE=agenda
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
