Busqueda de eventos y guardado-user

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Agenda_Academica
 APP_ENV=production
 APP_KEY=base64:yMVV0UWSRlguuIVOKVnHbHNXEbqX6gqZR9l4o+BFEv8=
 APP_DEBUG=false
-APP_URL=http://agenda-academica.sa-east-1.elasticbeanstalk.com/
+APP_URL=agenda-academica.sa-east-1.elasticbeanstalk.com
 
 LOG_CHANNEL=stack
 
