--- a/.env
+++ b/.env
@@ -2,16 +2,16 @@ APP_NAME=Agenda_Academica
 APP_ENV=production
 APP_KEY=base64:yMVV0UWSRlguuIVOKVnHbHNXEbqX6gqZR9l4o+BFEv8=
 APP_DEBUG=true
-APP_URL=agenda-academica.sa-east-1.elasticbeanstalk.com
+APP_URL=local
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=aa1bjnusb4fqbdp.cnswieupaupp.sa-east-1.rds.amazonaws.com
+DB_HOST=demoaa.c4vmts6tju2z.sa-east-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=aa1bjnusb4fqbdp
-DB_USERNAME=agendaroot
-DB_PASSWORD=Sonicfast94
+DB_DATABASE=demoaa
+DB_USERNAME=root
+DB_PASSWORD=123456789
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
