--- a/.gitattributes
+++ b/.gitattributes
@@ -2,5 +2,5 @@
 *.css linguist-vendored
 *.scss linguist-vendored
 *.js linguist-vendored
-*.html linguist-vendored
+public/* linguist-vendored
 CHANGELOG.md export-ignore
