--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,4 @@
 * text=auto
-*.css linguist-vendored
-*.scss linguist-vendored
-*.js linguist-vendored
-public/* linguist-vendored
+* linguist-vendored
+*.php linguist-vendored=false
 CHANGELOG.md export-ignore
