Modificaciones menores readme, env

--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=local
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=demoaa.c4vmts6tju2z.sa-east-1.rds.amazonaws.com
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=demoaa
+DB_DATABASE=test_db
 DB_USERNAME=root
-DB_PASSWORD=123456789
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
